# TournamentManager

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  release.yml
discord_bot/: bot.py
docker/app/: Dockerfile
docker/pgadmin/: servers.json
migrations/: README  env.py
migrations/versions/: 508c431a8100_add_tournament_table.py  af9b5868f4bb_add_tournament_table.py  b93b94f5e9e3_add_team_player_table.py  d589ab12770e_add_player_table.py  d65b478d8da2_add_team_table.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  app.py  base_schema.py  dependencies.py  exception_handlers.py  exception_schema.py  shared_schema.py
src/api/v1/: __init__.py
src/api/v1/players/: __init__.py  players_router.py  players_schema.py
src/api/v1/stats/: __init__.py
src/api/v1/teams/: teams_router.py  teams_schema.py
src/api/v1/tournaments/: __init__.py  tournaments_router.py  tournaments_schema.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  matchs.py  players.py  teams.py  tournaments.py
src/domain/exceptions/: __init__.py  error_codes.py  generic_exceptions.py  players_exceptions.py  team_players_exceptions.py  teams_exceptions.py  tournament_teams_exception.py  tournaments_exceptions.py
src/domain/repositories/: base_repository.py  filters.py  matchs_repository.py  paginations.py  players_repository.py  teams_repository.py  tournaments_repository.py
src/domain/services/: players_service.py  team_players_service.py  teams_service.py  tournament_teams_service.py  tournaments_service.py
src/domain/utils/: __init__.py  enums.py
src/infrastructure/: __init__.py
src/infrastructure/database/: models.py  session.py
src/infrastructure/database/repositories/: base_repository.py  players_repository.py  teams_repository.py  tournaments_repository.py
tests/: conftest.py  test_placeholder.py
tests/fixtures/: players_fixtures.py  teams_fixtures.py  tournaments_fixtures.py
tests/integration/: test_players.py  test_team_players.py  test_teams.py  test_tournament_teams.py  test_tournaments.py
tests/unit/: __init__.py  test_players.py  test_sort_request.py  test_teams.py  test_tournaments.py
