[project]
name = "tournamentmanager"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "anyio>=4.13.0",
    "discord>=2.3.2",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "mypy>=1.20.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.22",
    "ruff>=0.15.9",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
